Update CommonUtil.java